--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,17 +26,17 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_refresh"
-        android:text="换一批"
+        android:id="@+id/btn_front"
+        android:text="上一个"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_show"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/btn_show"/>
+        app:layout_constraintRight_toLeftOf="@id/btn_next"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_show"
-        android:text="妹子"
+        android:id="@+id/btn_next"
+        android:text="下一个"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img_show"
         app:layout_constraintLeft_toLeftOf="parent"
